add get by id and update swagger
