# src/YLunchApi.Domain/RestaurantAggregate/Dto/ClosingDateReadDto.cs
@@ -2,7 +2,7 @@ using YLunchApi.Domain.CommonAggregate.Dto;
 
 namespace YLunchApi.Domain.RestaurantAggregate.Dto;
 
-public class ClosingDateReadDto : EntityReadDto
+public class ClosingDateReadDto
 {
     public DateTime ClosingDateTime { get; set; }
 }
